2005-01-28 David Inglis

	Implement Eclipse 3.0 Next/Prev Annonation retargetable actions for CEditor with Problems
	view highlighting.
	
	* plugin.xml
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIds.java
	* src/org/eclipse/cdt/internal/ui/editor/CDocumentProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorActionContributor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties

	+ src/org/eclipse/cdt/internal/ui/editor/GotoAnnotationAction.java

	- icons/full/ctool16/next_error_nav.gif
	- icons/full/ctool16/prev_error_nav.gif
	- icons/full/dtool16/next_error_nav.gif
	- icons/full/dtool16/prev_error_nav.gif
	- icons/full/etool16/next_error_nav.gif
	- icons/full/etool16/prev_error_nav.gif
 	- src/org/eclipse/cdt/internal/ui/editor/GotoErrorAction.java
	
	
2005-01-26 Alain Magloire
	Part of implementing PR 83112
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java
	Changes in the interface of the Core Model
	* refactor/org/eclipse/cdt/internal/corext/refactoring/rename/RenameElementProcessor.java
	* refactor/org/eclipse/cdt/internal/ui/refactoring/actions/RenameRefactoringAction.java

2005-01-26 Alain Magloire
	Part of implementing PR 83112
	* src/org/eclipse/cdt/internal/ui/cview/CView.java
	* src/org/eclipse/cdt/internal/ui/cview/SelectionTransferDragAdapter.java
	* src/org/eclipse/cdt/internal/ui/cview/SelectionTransferDropAdapter.java
	* src/org/eclipse/cdt/internal/ui/dnd/*.java

2005-01-24 Vladimir Hirsl
	SCD work for CDT 3.0
	Better displaying of error messages in TabFolderOptionBlock.
	* src/org/eclipse/cdt/ui/dialogs/TabFolderOptionsBlock.java
	* src/org/eclipse/cdt/internal/ui/CUIMessages.properties
	
2005-01-24 Alain Magloire
	PR 83514 patch from Przemek
	* src/org/eclipse/cdt/internal/ui/actions/ActionMessages.properties
	* src/org/eclipse/cdt/internal/ui/text/CoutlineInformaionControl.java
	* NEWS

2005-01-22 Alain Magloire
	PR 38958